--- a/styles/olai2.css
+++ b/styles/olai2.css
@@ -36,3 +36,47 @@
 .card-olai::after { bottom: 0; }
 
 /* Removed thread holes inside content so bullet dots align properly */
+.waveform {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 40px;
+  gap: 4px;
+}
+
+.waveform-bar {
+  width: 4px;
+  background: #b45f04;
+  border-radius: 2px;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+.waveform-bar:nth-child(1) {
+  animation-delay: 0s;
+  height: 15px;
+}
+.waveform-bar:nth-child(2) {
+  animation-delay: 0.1s;
+  height: 25px;
+}
+.waveform-bar:nth-child(3) {
+  animation-delay: 0.2s;
+  height: 35px;
+}
+.waveform-bar:nth-child(4) {
+  animation-delay: 0.3s;
+  height: 25px;
+}
+.waveform-bar:nth-child(5) {
+  animation-delay: 0.4s;
+  height: 15px;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scaleY(0.3);
+  }
+  50% {
+    transform: scaleY(1);
+  }
+}
